# app.js
@@ -1,25 +1,34 @@
-"use strict"
+const express = require('express')
+const app = express()
+const port = 3000
+var cors = require('cors')
+app.use(cors());
 
-var express = require('express')
-var app = express()
+const bodyParser = require('body-parser');
+app.use(bodyParser.urlencoded({ extended: true }));
+app.use(express.json());
+app.use(cors());
+key= "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1c2VybmFtZSI6IlNocmV5YSIsInBhc3N3b3JkIjoiYWIxMiJ9.b8DjV_h0Rq1ywgcfD2NjABUVptDM-3TiCUUEZUOpEdA"
 
-app.listen(3000)
-console.log('Node.js Express server id running on port 3000...')
+// var request = require("request")
 
-app.use(function (req, res, next) {
+app.use(function (req, response, next) {
 	// Website you wish to allow to connect
 	const allowedOrigins = ['https://editor.swagger.io', 'https://hoppscotch.io'];
 	const origin = req.headers.origin;
+	const pathToSwaggerUi = "/home/ec2-user/swagger-ui/dist"
+        app.use(express.static(pathToSwaggerUi))
+
 		
 	if (allowedOrigins.includes(origin)) {
-	  res.setHeader('Access-Control-Allow-Origin', origin);
+	  response.setHeader('Access-Control-Allow-Origin', origin);
 	}
 
 	// Request methods you wish to allow eg: GET, POST, OPTIONS, PUT, PATCH, DELETE
-	res.setHeader('Access-Control-Allow-Methods', 'GET, POST');
+	response.setHeader('Access-Control-Allow-Methods', 'GET, POST');
 	
 	// Request headers you wish to allow
-	res.setHeader('Access-Control-Allow-Headers', 'X-Requested-With,content-type');
+	response.setHeader('Access-Control-Allow-Headers', 'X-Requested-With,content-type');
 	
 	const bearerHeader = req.headers["authorization"];
 	if (typeof bearerHeader != "undefined") {
@@ -34,73 +43,55 @@ app.use(function (req, res, next) {
   });
 
 
+// endpoint for `GET/data/2.5/weather` 
 app.get('/data/2.5/weather', get_weather)
-app.get("/v1/weather", get_weather)
-app.post("/v1/auth", auth);
-app.get("/v1/hello", greet);
+app.get('/v1/weather' ,get_weather)
+app.get('/v1/hello',get_hello)
+app.post('/v1/auth', post_auth)
 
-function get_weather(request, response) {
-    response.json( {
-      "coord": {
-        "lon": -123.262,
-        "lat": 44.5646
-      },
-      "weather": [
-        {
-          "id": 741,
-          "main": "Fog",
-          "description": "fog",
-          "icon": "50n"
-        }
-      ],
-      "base": "stations",
-      "main": {
-        "temp": 276.57,
-        "feels_like": 276.57,
-        "temp_min": 274.72,
-        "temp_max": 279.05,
-        "pressure": 1024,
-        "humidity": 79
-      },
-      "visibility": 805,
-      "wind": {
-        "speed": 0,
-        "deg": 0
-      },
-      "clouds": {
-        "all": 100
-      },
-      "dt": 1642320503,
-      "sys": {
-        "type": 2,
-        "id": 2012991,
-        "country": "US",
-        "sunrise": 1642347934,
-        "sunset": 1642381185
-      },
-      "timezone": -28800,
-      "id": 5720727,
-      "name": "Corvallis",
-      "cod": 200
-    } )
+// To Do : define two other endpoints. 
+
+function get_weather(req,response)
+{
+  if(req.query.token == key){
+    response.json({"coord":{"lon":-123.262,"lat":44.5646},"weather":[{"id":741,"main":"Fog","description":"fog","icon":"50n"}],"base":"stations","main":{"temp":278.16,"feels_like":278.16,"temp_min":275.73,"temp_max":281,"pressure":1025,"humidity":78},"visibility":402,"wind":{"speed":0,"deg":0},"clouds":{"all":100},"dt":1642227125,"sys":{"type":2,"id":2012991,"country":"US","sunrise":1642175199,"sunset":1642208235},"timezone":-28800,"id":5720727,"name":"Corvallis","cod":200})
+  }
+	
 }
 
-function greet(req, res) {
-    if (req.token == "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJzdWIiOiIxMjM0NTY3ODkwIiwibmFtZSI6IkthcmwgQWRyaWFubyIsImlhdCI6MTUxNjIzOTAyMn0.STyNSCjMt9cKNL6YVfLRTBabPbzbW1FDRebDqTwC2-c") {
-      res.json({
-        "greeting": "Elyon says Hello" 
-      });
-    }
-    else {
-      res.sendStatus(401);
+function get_hello(req,response)
+{
+  if (req.query.token == key){
+    response.json({
+      "hello": "Hello Brother"
+    });
+
+  }
+  else {
+    response.sendStatus(401);
+  }
+  
+}
+
+
+
+function post_auth(req,res){
+  let usernames = ['Elyon','Sh','abc']
+  let passwords = ['ab12','bng','eg23']
+  // const obj = JSON.parse(req.body)
+  let username = req.body.username
+  let pwd = req.body.password
+
+  if(usernames.includes(username)){
+    if(passwords.includes(pwd)){
+        res.json({ "access-token":key,
+      "expires": "2022-01-11T22:18:26.625Z"
+    })
     }
 }
-
-function auth(req, res) {
-    res.json( {
-      "access-token": "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJzdWIiOiIxMjM0NTY3ODkwIiwibmFtZSI6IkthcmwgQWRyaWFubyIsImlhdCI6MTUxNjIzOTAyMn0.STyNSCjMt9cKNL6YVfLRTBabPbzbW1FDRebDqTwC2-c",
-      "expires": "2022-02-11T23:59:59.999-08:00"
-    } )
 }
 
-// let's try Rebase and merge
+
+app.listen(port, () => {
+  console.log("Server listening at port " + port)
+})
